--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -30,7 +30,7 @@ clean-targets: # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
-    staging:
-      schema: staging
-      materialized: view
+  - my_new_project:
+      - staging:
+          - schema: staging
+          - materialized: view
