--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: "tesing_dbt"
+name: "dbt_check"
 version: "1.0.0"
 config-version: 2
 
@@ -30,7 +30,7 @@ clean-targets: # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  - testing_dbt:
+  - dbt_check:
       - staging:
           - schema: staging
           - materialized: view
