--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -30,7 +30,10 @@ clean-targets: # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  - dbt_check:
-      - staging:
-          - schema: staging
-          - materialized: view
+  dbt_check:
+    staging:
+      schema: staging
+      materialized: view
+    marts:
+      schema: marts
+      materialized: table
